--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   <script>
     // 🔹 URL de tu Apps Script desplegado
-    const SCRIPT_URL = "PEGAR_AQUI_TU_URL";
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycby4LsHQqmfnERkpV4leiWPfIiN4OAlmIdirfEgQICRkBE2TVV1fuQ_XShl8LUw0qDGMAQ/exec";
 
     // Estructura de materias y casillas habilitadas
     const materias = [
