--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Material Aulas Regulares</title>
+  <title>Avance Académico</title>
   <style>
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -88,7 +88,7 @@
 
     // Estructura de materias y casillas habilitadas
     const materias = [
-    { nombre: "ECONOMÍA", grados: [0,0,1,1,1] },
+     { nombre: "ECONOMÍA", grados: [0,0,1,1,1] },
     { nombre: "GEOGRAFÍA", grados: [1,1,1,1,1] },
     { nombre: "HISTORIA_DEL_PERÚ", grados: [1,1,1,1,1] },
     { nombre: "HISTORIA_UNIVERSAL", grados: [0,0,1,1,1] },
